<resources xmlns:http="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">IDEC mobile</string>
    <string name="action_settings">Client settings</string>
    <string name="action_stations_settings">Stations\' settings</string>
    <string name="action_send">Send</string>
    <string name="action_send_all">Send all</string>
    <string name="action_fetch">Fetch messages</string>
    <string name="action_share">Share this</string>
    <string name="action_share_idec">Share in IDEC</string>
    <string name="action_download">Download</string>
    <string name="action_download_list">Download list</string>
    <string name="action_update_from_server">Update from server</string>
    <string name="action_download_echolist">Get echolist from node</string>
    <string name="action_mark_all_base_read">Mark all messages as read</string>
    <string name="action_mark_all_read">Mark all as read</string>
    <string name="action_mark_favorite">Mark favorite</string>
    <string name="action_display_unread_only">View: unread only</string>
    <string name="action_compose">Compose</string>
    <string name="action_new_message">New message</string>
    <string name="action_new_message_short">New in echo</string>
    <string name="action_reply">Reply</string>
    <string name="action_quote_reply">With quote</string>
    <string name="action_file_upload">Upload a file</string>
    <string name="action_file_choose">Pick a file</string>
    <string name="action_file_delete">Delete file</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_all">Delete all</string>
    <string name="action_delete_favorites">Clear all favorites</string>
    <string name="action_delete_station">Remove station</string>
    <string name="action_view_full_log">View full log</string>
    <string name="action_autoconfig">Configure automatically</string>
    <string name="action_save">Save</string>
    <string name="action_save_in_file">Save to file</string>
    <string name="action_speak_tts">Say it out loud</string>
    <string name="action_echo_export">Export into bundle file</string>
    <string name="action_echo_truncate">Truncate echo</string>
    <string name="action_echo_truncate_summary">Truncate echoarea up to N messages</string>
    <string name="action_delete_database">Clear whole database</string>
    <string name="action_delete_drafts">Messages deletion</string>
    <string name="action_clear_xc">Clear cache</string>
    <string name="action_bundle_import">Import of messages\' bundles</string>
    <string name="action_database_export">Whole database export</string>
    <string name="action_config_import">Config import</string>
    <string name="action_config_export">Export</string>
    <string name="navigate_first">To the beginning</string>
    <string name="navigate_last">To the end</string>
    <string name="navigate_msglist">Go to messages list</string>
    <string name="navigate_discussion_previous">Navigate to the past in discussion</string>
    <string name="navigate_discussion_next">Get back in discussion</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_file_chooser">Pick a file</string>
    <string name="title_activity_list_edit">Edit echolist</string>
    <string name="title_activity_debug">Debug window</string>
    <string name="of" formatted="false">%1$d of %2$d</string>
    <string name="quantity">Quantity: %d</string>
    <string name="messages_quantity">Messages: %d</string>
    <string name="favorites">Favorites</string>
    <string name="carbon">Carbon area</string>
    <string name="unread">Unread</string>
    <string name="file_echoareas">File echoareas</string>
    <string name="search_results">Search results</string>
    <string name="client_config">Client\'s config file</string>
    <string name="about">About us</string>
    <string name="newbies">For newbies</string>
    <string name="license">License</string>
    <string name="node_files">Node files</string>
    <string name="database">Database</string>
    <string name="wait">Please wait…</string>
    <string name="done">Completed!</string>
    <string name="start">Start</string>
    <string name="ok_close">All right, close this</string>
    <string name="loading">Loading</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="loading_messages">Messages downloading</string>
    <string name="sending_letters">Sending messages</string>
    <string name="connecting_to_station">Connecting to the station…</string>
    <string name="searching_messages">Performing search</string>
    <string name="inserting_to_list">List is being created…</string>
    <string name="exporting_certain_messages">Export of particular messages…</string>
    <string name="exporting_by_echoes">Export by echoareas…</string>
    <string name="trying_to_copy_something">Trying to copy into %s inside working directory</string>
    <string name="autoconfig_done">Autoconfiguration complete</string>
    <string name="messages_sent">Messages sent: %d</string>
    <string name="messages_got">Received %d messages</string>
    <string name="files_got">New files announced: %d</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="clear_favorites_confirm">Are you sure to remove this flag from all messages?</string>
    <string name="confirmation">Confirmation</string>
    <string name="are_you_crazy">Are you sane comrade??</string>
    <string name="deleting_messages">Messages are being removed</string>
    <string name="deleting_useless_messages">Removing useless messages…</string>
    <string name="deleting_n_messages">Start deleting %d messages</string>
    <string name="deleted_n_messages">Deleted %d messages</string>
    <string name="deleting_database_complete">Database was deleted</string>
    <string name="echoarea_clear_done">Echo has been truncated</string>
    <string name="xc_cache_clear_complete">/x/c cache cleared</string>
    <string name="echo_deletion_complete">Echoarea deletion completed</string>
    <string name="ok_let_them_exist">That\'s right decision!</string>
    <string name="ok_database_is_alive">All fine with that</string>
    <string name="edit_by_yourself">Edit your list by hand…</string>
    <string name="i_am_really_sure">I know what I\'m doing</string>
    <string name="config_saved">Config saved into file</string>
    <string name="message_updated">Message has been updated in database</string>
    <string name="notification_service_reload">IDECMobile background service (re)started</string>
    <string name="notification_tap_to_open">Open client</string>
    <string name="message_saved_to_file">Message saved to file</string>
    <string name="msgid_clipboard_done">Message id copied to clipboard</string>
    <string name="fid_clipboard_done">File id copied to clipboard</string>
    <string name="filename_clipboard_done">File name copied to clipboard</string>
    <string name="enable_node">Enable this station</string>
    <string name="node_authstr">Auth string (password)</string>
    <string name="node_name">Node name</string>
    <string name="node_address">Server address</string>
    <string name="node_xc_support">IDEC scheme /x/c support</string>
    <string name="node_advanced_ue">Advanced /u/e support</string>
    <string name="node_continue_loading_index">Continue index downloading if all messages look like new</string>
    <string name="node_ue_limit">Msgid\'s limit for echoarea per request</string>
    <string name="node_cut_index">Forced index quantity limit (0 to disable)</string>
    <string name="file_echoarea">File echoarea</string>
    <string name="sorting">Sort</string>
    <string name="sort_date_asc">Latest at the top</string>
    <string name="sort_date_desc">Old ones at the top</string>
    <string name="sort_name_asc">Sort by name</string>
    <string name="sort_name_desc">Sort by name (descending)</string>
    <string name="sort_size_asc">By size (ascending)</string>
    <string name="sort_size_desc">By size (descending)</string>
    <string name="filename">File name</string>
    <string name="file_description">Description</string>
    <string name="action_file_send">Upload</string>
    <string name="search_in_db">Database search</string>
    <string name="search_advanced">Advanced search</string>
    <string name="settings_category_interface">User Interface</string>
    <string name="settings_select_theme">UI Theme</string>
    <string name="settings_select_theme_summary">Change client appearance</string>
    <string name="settings_editor">Built-in messages editor</string>
    <string name="settings_editor_summary">Use client\'s built-in editor to write/answer messages</string>
    <string name="settings_citation">Simplified quotation</string>
    <string name="settings_citation_summary">Don\'t include usernames in quotes</string>
    <string name="settings_pull_to_refresh">Pull to refresh</string>
    <string name="settings_pull_to_refresh_summary">Fetch new messages from server pulling the finger down on the main screen</string>
    <string name="settings_hide_toolbar">Hide toolbar</string>
    <string name="settings_hide_toolbar_summary">Hide application toolbar while scrolling messages</string>
    <string name="settings_open_last_read_message">Show message read last time</string>
    <string name="settings_open_last_read_message_summary">Don\'t show messages list when navigating to echoarea, instantly start reading mode instead</string>
    <string name="settings_open_unread_after_fetch">Unread after fetch</string>
    <string name="settings_open_unread_after_fetch_summary">Show all unread messages right after downloading</string>
    <string name="settings_sort_by_date">Sort by the date message was sent</string>
    <string name="settings_sort_by_date_summary">Otherwise messages are sorted by fetching time</string>
    <string name="settings_carbon_names">Carbon area user names</string>
    <string name="settings_carbon_names_summary">Messages sent to the selected users will appear in carbon area (delimiter is colon)</string>
    <string name="settings_carbon_size">Carbon area size in messages</string>
    <string name="settings_carbon_size_summary">Show up to N messages in carbon area</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_notifications">Turn on notifications</string>
    <string name="settings_notifications_summary">Show notifications informing of new messages</string>
    <string name="settings_notification_freq">Check-up frequency</string>
    <string name="settings_notification_freq_summary">Check for new messages every N minutes</string>
    <string name="settings_notification_vibrate">Vibration</string>
    <string name="settings_notification_vibrate_summary">Vibrate if new messages are available on server</string>
    <string name="settings_category_network">Network</string>
    <string name="settings_network_timeout">Connection timeout</string>
    <string name="settings_network_timeout_summary">Specify time amount in seconds</string>
    <string name="settings_messages_per_request">Messages downloaded per request</string>
    <string name="settings_messages_per_request_summary">Maximum amount of messages downloaded per request. If you have unstable network connection, you may lower the value</string>
    <string name="settings_proxy">HTTP proxy</string>
    <string name="settings_proxy_summary">Connect through proxy server</string>
    <string name="settings_proxy_address">Proxy settings</string>
    <string name="settings_proxy_address_summary">String format: user:pass@host:port. Orbot usually uses port 8118, i2p prefers 4444</string>
    <string name="settings_tor">Tor integration</string>
    <string name="settings_tor_summary">Start Orbot automatically</string>
</resources>