<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="vit01.idecmobile.GUI.Reading.MessageSlideActivity">

    <item
        android:id="@+id/action_starred"
        android:orderInCategory="1"
        android:title="@string/action_mark_favorite"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_last_item"
        android:orderInCategory="2"
        android:title="@string/navigate_last"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_msglist_return"
        android:orderInCategory="3"
        android:title="@string/navigate_msglist"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_first_item"
        android:title="@string/navigate_first"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_in_file"
        android:title="@string/action_save_in_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_update_from_server"
        android:title="@string/action_update_from_server"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tts_speak"
        android:title="@string/action_speak_tts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_discussion_previous"
        android:title="@string/navigate_discussion_previous"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_discussion_next"
        android:title="@string/navigate_discussion_next"
        android:visible="false"
        app:showAsAction="never" />
</menu>