<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_fetch"
        android:title="@string/action_fetch"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send"
        android:title="@string/action_send_all"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/search_in_db"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <item
        android:id="@+id/action_advancedsearch"
        android:title="@string/search_advanced"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit_echoareas"
        android:title="@string/title_activity_list_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mark_all_base_read"
        android:title="@string/action_mark_all_base_read"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_stations"
        android:title="@string/action_stations_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
