<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="vit01.idecmobile.StationsActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.MyCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/node_name" />

        <EditText
            android:id="@+id/stations_nodename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />

        <TextView
            style="@style/AppTheme.MyCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/node_address" />

        <EditText
            android:id="@+id/stations_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:maxLines="1" />

        <TextView
            style="@style/AppTheme.MyCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/node_authstr" />

        <EditText
            android:id="@+id/stations_authstr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />

        <Switch
            android:id="@+id/stations_fetch_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/enable_node" />

        <CheckBox
            android:id="@+id/stations_xc_enable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/node_xc_support" />

        <CheckBox
            android:id="@+id/stations_advanced_ue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/node_advanced_ue" />

        <CheckBox
            android:id="@+id/stations_pervasive_ue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/node_continue_loading_index" />

        <TextView
            style="@style/AppTheme.MyCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/node_ue_limit" />

        <EditText
            android:id="@+id/stations_fetch_limit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1" />

        <TextView
            style="@style/AppTheme.MyCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/node_cut_index" />

        <EditText
            android:id="@+id/stations_cut_remote_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLines="1" />

        <Button
            android:id="@+id/stations_get_echolist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_download_echolist" />

        <Button
            android:id="@+id/stations_autoconfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_autoconfig" />
    </LinearLayout>
</ScrollView>
